--- a/foundations/intro-to-css/02-class-id-selectors/index.html
+++ b/foundations/intro-to-css/02-class-id-selectors/index.html
@@ -10,8 +10,8 @@
   <body>
     <p class="all_odd">Number 1 - I'm a class!</p>
     <div id="number_two">Number 2 - I'm one ID.</div>
-    <p class="font_24">Number 3 - I'm a class, but cooler!</p>
+    <p class="all_odd font_24">Number 3 - I'm a class, but cooler!</p>
     <div>Number 4 - I'm another ID.</div>
-    <p>Number 5 - I'm a class!</p>
+    <p class="all_odd">Number 5 - I'm a class!</p>
   </body>
 </html>
