Create #the_4th id and add style to it on css

--- a/foundations/intro-to-css/02-class-id-selectors/index.html
+++ b/foundations/intro-to-css/02-class-id-selectors/index.html
@@ -11,7 +11,7 @@
     <p class="all_odd">Number 1 - I'm a class!</p>
     <div id="number_two">Number 2 - I'm one ID.</div>
     <p class="all_odd font_24">Number 3 - I'm a class, but cooler!</p>
-    <div>Number 4 - I'm another ID.</div>
-    <p class="all_odd">Number 5 - I'm a class!</p>
+    <div class="font_24" id="the_4th">Number 4 - I'm another ID.</div>
+    <p class="all_odd"">Number 5 - I'm a class!</p>
   </body>
 </html>
